# Trump-tweet-visualise

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
app/: main.py
config/: defaults.toml
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: architecture.md  artifact-schema.md  configuration.md  data-pipeline.md  deployment.md  global-animation.md  home.mdx  intro.md  quickstart.md  streamlit-app.md  testing.md  troubleshooting.md
docs-site/src/css/: custom.css
scripts/: deploy.py  deploy_ubuntu.sh  deploy_windows.ps1  run_services.py  run_ubuntu.sh  run_windows.ps1  setup_ubuntu.sh  setup_windows.ps1
src/trump_graph/: __init__.py  __main__.py  app.py  global_animation.py  graph_build.py  io.py  metrics.py  pipeline.py  preprocess.py  settings.py
src/trump_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_smoke.py  test_global_animation.py  test_graph_build.py  test_pipeline_integration.py  test_preprocess.py  test_settings.py
tests/fixtures/: sample_tweets.csv
