[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trump-graph"
version = "0.1.0"
description = "Weekly mention network builder and viewer for Trump tweet data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
